# amalgam-lang-py

./: .coveragerc  .flake8  .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements-3.10-dev.txt  requirements-3.10.txt  requirements-3.11-dev.txt  requirements-3.11.txt  requirements-3.12-dev.txt  requirements-3.13-dev.txt  requirements-3.14-dev.txt  requirements-3.8-dev.txt  requirements-3.8.txt  requirements-3.9-dev.txt  requirements-3.9.txt  version.json
.github/templates/: version_summary.md
.github/workflows/: build-pr.yml  build-test-package.yml  build.yml  create-branch-build.yml  create-pr-build.yml  create-release-build.yml  get-dependency-details.yml  pytest.yml  rebuild-requirements.yml  release.yml  workflow-summary.yml
amalgam/: api.py  c_api_scope.py  scope_manager.py
amalgam/test/: __init__.py  test.amlg  test_api.py  test_standalone.py
config/: build-vars.yml  build.properties  source_extra_paths
doc/: dependency_decisions.yml
