[build-system]
requires = ["setuptools>=68.0.0", "wheel~=0.40.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "amalgam-lang"
dynamic = ["version"]
readme = "README.md"
description = "A direct interface with Amalgam compiled DLL, dylib, or so."
authors = [
    {name = "Howso Incorporated"},
    {email = "support@howso.com"},
]
requires-python = ">=3.9"
keywords = ["machine", "learning", "artificial", "intelligence"]
license = {file = "LICENSE.txt"}
classifiers = [
        "Development Status :: 5 - Production/Stable",
        "Intended Audience :: Science/Research",
        "Topic :: Scientific/Engineering :: Artificial Intelligence",
        "License :: OSI Approved :: GNU Affero General Public License v3",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: 3.13",
        "Operating System :: MacOS",
        "Operating System :: MacOS :: MacOS X",
        "Operating System :: Microsoft :: Windows",
        "Operating System :: Microsoft :: Windows :: Windows 10",
        "Operating System :: Microsoft :: Windows :: Windows 11",
        "Operating System :: POSIX :: Linux",
]

[project.optional-dependencies]
dev = [
   "flake8",
   "flake8-docstrings",
   "flake8-import-order",
   "pytest",
   "pytest-cov",
   "pytest-mock",
   "pytest-xdist",
]

[project.urls]
homepage = "https://howso.com"
documentation = "https://docs.howso.com/"
repository = "https://github.com/howsoai/amalgam-lang-py"

[tool.setuptools]
packages = ["amalgam"]

[tool.isort]
profile = "google"
known_first_party = ["howso"]
line_length = 119
group_by_package = true
use_parenthesis = true
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 2

[tool.yapf]
based_on_style = "pep8"
column_limit = 119
dedent_closing_brackets = true
split_penalty_after_opening_bracket = 100
split_penalty_for_added_line_split = 300

# version is managed by setuptools_scm
[tool.setuptools_scm]
